<resources>
    <string name="app_name">UserPanelQUizApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_quiz_contest">Quiz Contest</string>
    <string name="menu_timer_quiz">Timer Quiz</string>
    <string name="menu_completed_task">Task Completed</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
