<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_quiz_contest"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_quiz_contest" />
        <item
            android:id="@+id/nav_Timer_quiz"
            android:icon="@drawable/ic_timer_quiz"
            android:title="@string/menu_timer_quiz" />
        <item
            android:id="@+id/nav_completedTask"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_completed_task" />
    </group>

    <item android:title="System">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
